color game connected with db

--- a/server/public/games/color-game/game.html
+++ b/server/public/games/color-game/game.html
@@ -3,6 +3,7 @@
 <html style="height: 100%;">
     <head>
         <style type="text/css"></style>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script type="text/javascript" src="../phaser.min.js"></script>
         <script type="text/javascript" src="game.js"></script>
     </head>
