--- a/server/public/games/puzzle/game.html
+++ b/server/public/games/puzzle/game.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Phaser 3 TypeScript Starter</title>
+    <meta charset="utf-8" />
+    <style>
+      body {
+        margin: 0;
+      }
+    </style>
 
-<html style="height: 100%;">
-    <head>
-        <style type="text/css"></style>
-        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-        <script type="text/javascript" src="../phaser.min.js"></script>
-        <script type="text/javascript" src="game.js"></script>
-    </head>
-    <body>
-        <div id="thegame" style="overflow: hidden; width: 100%; height: 100%;">
-        </div>
-    </body>
+    <script type="module" crossorigin src="assets/index.ce824e38.js"></script>
+    <link rel="modulepreload" href="assets/vendor.daadd3da.js" />
+  </head>
+  <body>
+    <div id="game"></div>
+  </body>
 </html>
